Web Inspector: REGRESSION: Elements: "Inspect Element" context menu often doesn't select that element https://bugs.webkit.org/show_bug.cgi?id=197091 <rdar://problem/49953728>

Reviewed by Joseph Pecoraro.

Delay the `inspect` event fron firing with the focued node until the frontend has had a
chance to request the document. Otherwise, requesting the document clears the mapping of
node-to-id, so the focused node's id would no longer be valid.

* inspector/agents/InspectorDOMAgent.cpp:
(WebCore::InspectorDOMAgent::didCreateFrontendAndBackend):
(WebCore::InspectorDOMAgent::willDestroyFrontendAndBackend):
(WebCore::InspectorDOMAgent::getDocument):
(WebCore::InspectorDOMAgent::focusNode):
(WebCore::InspectorDOMAgent::didCommitLoad):


Canonical link: https://commits.webkit.org/211351@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244476 268f45cc-cd09-0410-ab3c-d52691b4dbfc